# trading-chatbot

./: .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.supabase.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/: auth.py  config.py  intent_classifier.py  llm_client.py  main.py  market_data.py  pinecone_client.py  prompts.py  rate_limiter.py  schemas.py  session_store.py  ticker_extractor.py
backend/src/routes/: admin.py  auth.py  chat.py  health.py  quote.py  sessions.py
backend/tests/: conftest.py  test_auth.py  test_chat_endpoint.py  test_chat_stream.py  test_intent_classifier.py  test_market_data.py  test_pinecone_client.py  test_rate_limiter.py  test_schema_contract.py  test_session_store.py  test_ticker_extractor.py
docs/: architecture.md  deployment.md  schema-contract.md
frontend/: .dockerignore  .env.local.example  Dockerfile  next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/login/: page.tsx
frontend/components/: AuthButton.tsx  ChatWindow.tsx  CitationCard.tsx  MessageBubble.tsx  QuoteCard.tsx  SessionList.tsx  StreamingMarkdown.tsx  TickerChip.tsx
frontend/lib/: api.test.ts  api.ts  types.ts
plan/: trading-chatbot.md
scripts/: smoke_index.py
