[project]
name = "trading-chatbot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pinecone>=5",
  "openai>=1.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2",
  "sse-starlette>=2.1",
  "httpx>=0.27",
  "yfinance>=1.4.1",
  "pyjwt>=2.13.0",
  "resend>=2.30.1",
]

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
